--- a/views/show_patent.pug
+++ b/views/show_patent.pug
@@ -24,23 +24,15 @@ html
     div(id="rightside")
 
     div(id="mynetwork")
-      |<script type="text/javascript">
-      |var nodes = new vis.DataSet([
-      |  {id: 1, label: 'US7322199', title: 'Stirling cooler'},
-      |  {id: 2, label: 'Node 2'},
-      |  {id: 3, label: 'Node 3'},
-      |  {id: 4, label: 'Node 4'},
-      |  {id: 5, label: 'Node 5'} 
-      |]);   
-  
-      |var edges = new vis.DataSet([
-      |  {from: 1, to: 3, title: '1927'},
-      |  {from: 1, to: 2, color:{color:'red'}},
-      |  {from: 2, to: 4, color:'rgb(20,24,200)'},  
-      |  {from: 2, to: 5}
-      |]); 
-      //script(type="text/javascript",src='../scripts/testscript.js')
-      include ../scripts/testscript.js
+      script(type='text/javascript').
+        var nodes = new vis.DataSet(!{JSON.stringify(nodes)});
+        var edges = new vis.DataSet(!{JSON.stringify(edges)});
+        var data = { nodes: nodes, edges: edges };  
+        var container = document.getElementById('mynetwork');
+        var options = {}; 
+        var network = new vis.Network(container, data, options);
+      
+      //include ../scripts/testscript.js
 
     div(id="footer")
 
