worked on making abstract and claims readable

--- a/views/show_patent.pug
+++ b/views/show_patent.pug
@@ -16,10 +16,10 @@ html
     div(id="leftside")
 
       div(id="abstract")
-        p= abstract
+        | !{abstract}
 
       div(id="claims")
-        p= claims
+        p!= claims
 
     div(id="rightside")
 
