--- a/views/show_patent.pug
+++ b/views/show_patent.pug
@@ -25,12 +25,18 @@ html
 
     div(id="mynetwork")
       script(type='text/javascript').
+        var nodes_list = !{JSON.stringify(nodes)};
         var nodes = new vis.DataSet(!{JSON.stringify(nodes)});
         var edges = new vis.DataSet(!{JSON.stringify(edges)});
         var data = { nodes: nodes, edges: edges };  
         var container = document.getElementById('mynetwork');
-        var options = {}; 
+        var options = {interaction:{hover:true}}; 
         var network = new vis.Network(container, data, options);
+        network.on("doubleClick", function (params) {
+          params.event = "[original event]";
+          //document.getElementById('rightside').innerHTML = '<h2>doubleClick event:</h2>' + JSON.stringify(params, null, 4);
+          document.getElementById('rightside').innerHTML = nodes_list[params["nodes"]-1].label;
+        });
       
       //include ../scripts/testscript.js
 
