--- a/views/patent_search.pug
+++ b/views/patent_search.pug
@@ -1,7 +1,7 @@
 html
   head
     title
-      | test
+      | Patent Search
   body
     form(action="/search",method="get")
       input(type="text",name="patent_num")
