added way to add many patents

--- a/views/show_patent.pug
+++ b/views/show_patent.pug
@@ -25,6 +25,9 @@ html
         p!= claims
 
     div(id="rightside")
+      each val in topics 
+        li=val
+       
 
     div(id="mynetwork")
       script(type='text/javascript').
