--- a/views/show_patent.html
+++ b/views/show_patent.html
@@ -55,6 +55,13 @@ html
     overflow-y:scroll;
     border: 1px solid lightgray;
 }
+#topics {
+    width:600px;
+    height:100px;
+    overflow-y:scroll;
+    background-color:#eeeeee;
+    border: 1px solid black;
+}
 #footer {
     background-color:black;
     color:white;
@@ -84,6 +91,7 @@ Disclosed is a Stirling cooler, in which a partition contacting a front surface 
 </div>
 
 <div id="mynetwork"></div>
+<div id="topics"></div>
 
 <script type="text/javascript">
   // create an array with nodes
