--- a/views/show_patent.pug
+++ b/views/show_patent.pug
@@ -25,8 +25,10 @@ html
         p!= claims
 
     div(id="rightside")
-      each val in topics 
-        li=val
+      ol(type="1")
+        each val in similar
+          li
+            a(href="http://localhost:3000/search?patent_num=" + val[0])= val[0] + ": " + val[1] + "=" + val[2]
        
 
     div(id="mynetwork")
@@ -47,5 +49,8 @@ html
       
       //include ../scripts/testscript.js
 
+    div(id="topics")
+      each val in topics 
+        li=val
     div(id="footer")
 
