--- a/views/show_patent.pug
+++ b/views/show_patent.pug
@@ -12,7 +12,8 @@ html
     div(id="header")
       h1=id + ": " + title
       //h1= title
-      h2= author
+      h2="Inventor: " + inventor
+      h2="Assignee: " + assignee
 
     div(id="leftside")
 
